[gd_scene load_steps=2 format=2]

[ext_resource path="res://EditInput.gd" type="Script" id=1]

[node name="EditInput" type="Node2D"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 650.0
margin_bottom = 301.0
color = Color( 0.054902, 0.694118, 0.890196, 1 )

[node name="NameLabel" type="Label" parent="."]
margin_left = 15.0
margin_top = 19.0
margin_right = 104.0
margin_bottom = 33.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Neuron Label:"

[node name="Name" type="TextEdit" parent="."]
margin_left = 115.0
margin_top = 12.0
margin_right = 635.0
margin_bottom = 41.0

[node name="Save" type="Button" parent="."]
margin_left = 447.0
margin_top = 263.0
margin_right = 540.0
margin_bottom = 291.0
text = "Save"

[node name="ScrollRule" type="ScrollContainer" parent="."]
margin_left = 100.0
margin_top = 81.0
margin_right = 630.0
margin_bottom = 235.0

[node name="RuleBox" type="VBoxContainer" parent="ScrollRule"]

[node name="xcoordinate" type="Label" parent="."]
margin_left = 15.0
margin_top = 49.0
margin_right = 32.0
margin_bottom = 66.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "x:"

[node name="x" type="TextEdit" parent="."]
margin_left = 35.0
margin_top = 48.0
margin_right = 104.0
margin_bottom = 78.0
text = "0"

[node name="ycoordinate" type="Label" parent="."]
margin_left = 141.0
margin_top = 50.0
margin_right = 181.0
margin_bottom = 64.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "y:"

[node name="y" type="TextEdit" parent="."]
margin_left = 162.0
margin_top = 48.0
margin_right = 231.0
margin_bottom = 78.0
text = "0"

[node name="Cancel" type="Button" parent="."]
margin_left = 549.0
margin_top = 263.0
margin_right = 641.0
margin_bottom = 292.0
text = "Cancel"

[node name="SpikeTrainLabel" type="Label" parent="."]
margin_left = 16.0
margin_top = 86.0
margin_right = 89.0
margin_bottom = 100.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Spike Train:"

[node name="SpikeTrain" type="TextEdit" parent="."]
margin_left = 93.0
margin_top = 85.0
margin_right = 629.0
margin_bottom = 251.0

[node name="InvalidCoordinatePopup" type="Popup" parent="."]
margin_left = 150.0
margin_top = 80.0
margin_right = 450.0
margin_bottom = 260.0

[node name="bg" type="ColorRect" parent="InvalidCoordinatePopup"]
margin_right = 300.0
margin_bottom = 180.0
color = Color( 0.921569, 0.694118, 0.152941, 1 )

[node name="message" type="Label" parent="InvalidCoordinatePopup"]
margin_left = 26.0
margin_top = 32.0
margin_right = 264.0
margin_bottom = 109.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Invalid Coordinates!

Enter a number between 0 and 5000 for x, and a number between 0 and 525 for y."
autowrap = true

[node name="InvalidSpikeTrainPopup" type="Popup" parent="."]
margin_left = 150.0
margin_top = 80.0
margin_right = 450.0
margin_bottom = 260.0

[node name="bg" type="ColorRect" parent="InvalidSpikeTrainPopup"]
margin_right = 300.0
margin_bottom = 180.0
color = Color( 0.921569, 0.694118, 0.152941, 1 )

[node name="message" type="Label" parent="InvalidSpikeTrainPopup"]
margin_left = 26.0
margin_top = 32.0
margin_right = 264.0
margin_bottom = 109.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Invalid Spike Train!

Spike Train is a comma-separated string of 1s and 0s without spaces."
autowrap = true

[connection signal="pressed" from="Save" to="." method="_on_Save_pressed"]
[connection signal="pressed" from="Cancel" to="." method="_on_Cancel_pressed"]
